# nexus-verify

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  justfile  pyproject.toml
.github/workflows/: build-dev.yml  build.yml  ci.yml
docs/: DESIGN.md
src/nexus_verify/: __init__.py  config.py  engine.py  main.py
src/nexus_verify/api/: __init__.py  router.py  schemas.py
src/nexus_verify/core/: __init__.py  exceptions.py  registry.py  result.py  task.py
src/nexus_verify/preprocessing/: __init__.py  filters.py  image.py  transforms.py
src/nexus_verify/providers/: __init__.py  base.py  click_features.py  click_solver.py  ddddocr.py  rotate.py  slide.py
src/nexus_verify/providers/custom/: __init__.py  provider.py
src/nexus_verify/providers/image_click/: __init__.py  matcher.py  provider.py
tests/: conftest.py  test_api.py  test_engine.py  test_preprocessing.py  test_registry.py
tests/providers/: test_click_solver.py  test_ddddocr.py  test_image_click.py  test_slide.py
