[project]
name = "nexus-verify"
version = "2.0.0"
description = "Multi-provider verification service"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "loguru>=0.7",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-multipart>=0.0.9",
    "opencv-python-headless>=5.0.0.93",
    "numpy>=2.5.1",
    "pillow>=12.3.0",
    "requests>=2.34.2",
    "ddddocr>=1.6.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "pyright>=1.1.411",
]

[project.scripts]
nexus-verify = "nexus_verify.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nexus_verify"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pyright]
pythonVersion = "3.12"
reportMissingImports = "warning"
reportMissingTypeStubs = "warning"
