[project]
name = "nexus-verify"
version = "2.0.1"
description = "Multi-provider verification service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "loguru>=0.7",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-multipart>=0.0.9",
    "opencv-python-headless>=5.0.0.93",
    "numpy>=2.5.1",
    "pillow>=12.3.0",
    "requests>=2.34.2",
    "ddddocr>=1.6.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "pyright>=1.1.411",
    "ruff>=0.15.21",
    "pre-commit>=4.6.0",
]

[tool.ruff]
target-version = "py312"
line-length = 120
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "*.egg-info",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # Pyflakes
    "I",  # isort
    "S110",  # try-except-pass (do not silently swallow exceptions)
]
ignore = [
    "S101",  # assert
    "S311",  # pseudo-random generators
    "S404",  # subprocess
    "S603",  # subprocess-without-shell-equals-true
    "S607",  # start-process-with-partial-path
    "S608",  # hardcoded-sql-expression
]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["S101"]

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.12"
exclude = [".venv", "__pycache__"]
reportMissingImports = "warning"
reportMissingTypeStubs = "warning"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v"
filterwarnings = [
    "ignore::DeprecationWarning:starlette.*",
]
